fixed css so things are not overlapping

--- a/startup-service/src/app.css
+++ b/startup-service/src/app.css
@@ -16,7 +16,7 @@ main {
   justify-content: space-around;
   background-color: rgb(0, 46, 93);
   color: white;
-  height: calc(100vh - 12.3vh);
+  height: calc(100vh);
 }
 
 footer {
